--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,8 +1,4 @@
 <%= render 'search_form' %>
 <% if !@flights.blank? %>
-	<ul>
-		<%= @flights.each do |f| %>
-			<li><%= f %></li>
-		<% end %>
-	</ul>
+	<%= render 'book_form' %>
 <% end %>
